exports[`test Renders an InfoLabel with a characterCounter 1`] = `
<span
  className="controlNote controlLabelRequired">
  <strong>
    0
  </strong>
  /
  500
</span>
`;

exports[`test Renders an InfoLabel with a characterCounter and displays correct count and maxLength 1`] = `
<span
  className="controlNote controlLabelRequired">
  <strong>
    4
  </strong>
  /
  150
</span>
`;

exports[`test Renders an InfoLabel with a characterCounter and displays the requiredLabel, when value isn't set 1`] = `
<span
  className="controlNote controlLabelRequired">
  required
</span>
`;

exports[`test Renders an InfoLabel without crashing 1`] = `
<span
  className="controlNote controlLabelRequired">
  required
</span>
`;
